# chatsystem

./: .gitignore  Cargo.toml
api/read/: Cargo.toml
api/write/: Cargo.toml
common/config/: Cargo.toml
common/config/src/: lib.rs
common/logger/: Cargo.toml
common/logger/src/: lib.rs
configs/: ws.yaml
ws/: Cargo.toml
ws/src/: global.rs  main.rs
ws/src/api/: health.rs  mod.rs  router.rs  ws.rs
