[package]
name = "ws"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.39.2", features = ["full"] }
futures = "0.3.30"
anyhow = "1.0.86"

axum = { version = "0.7.5", features = ["ws","http2"] }

tower = "0.4.13"
tower-http = { version = "0.5.2", features = [
    "trace",
    "compression-br",
    "propagate-header",
    "sensitive-headers",
    "cors",
] }


config = { path = "../common/config" }
logger = { path = "../common/logger"}

serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"

lazy_static = "1.5.0"
clap = { version = "4.5.13", features = ["derive"] }
tracing = "0.1.40"
